Translate2 - Org/src/objects/TypeOfRooms__c.object
<CustomObject>
    <description>Master Guest Room Type</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>部屋タイプ種別</label>
        <picklist>
            <picklistValues>
                <fullName>通常</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>E/B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>写</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MaxNumber__c</fullName>
        <label>最大人数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxRooms__c</fullName>
        <inlineHelpText>部屋タイプの最大部屋数</inlineHelpText>
        <label>数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nums__c</fullName>
        <formula>if ( len(TEXT(MaxRooms__c)) = 1, &quot;  &quot; &amp; TEXT(MaxRooms__c), TEXT(MaxRooms__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$数</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeCode__c</fullName>
        <description>外連携用タイプコード</description>
        <externalId>true</externalId>
        <label>部屋タイプコード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeName__c</fullName>
        <label>部屋タイプ名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <externalId>true</externalId>
        <label>#Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>部屋タイプ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Seq__c</columns>
        <columns>NAME</columns>
        <columns>MaxRooms__c</columns>
        <columns>RoomTypeCode__c</columns>
        <columns>RoomTypeName__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>